--- a/src/components/MovieList.module.css
+++ b/src/components/MovieList.module.css
@@ -4,21 +4,23 @@
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
+    font-family: 'Arial', sans-serif;
 }
 
 .movie_card {
-    border: 1px solid #ccc;
-    border-radius: 8px;
+    border: #ccc solid 1px;
+    border-radius: 5px;
     padding: 15px;
     width: 200px;
     text-align: center;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     background-color: #fff;
     transition: transform 0.2s;
+    box-shadow: #acabab 2px 2px 5px;
 }
 
 .movie_card:hover {
     transform: scale(1.05);
+    box-shadow: #acabab 5px 5px 5px;
 }
 
 .movie_title {
@@ -53,12 +55,13 @@
     display: inline-block;
     margin-top: 10px;
     padding: 10px 15px;
-    background-color: #007BFF;
-    color: white;
+    background-color: #9ac7fb;
+    border: #ccc solid 1px;
     text-decoration: none;
     border-radius: 5px;
-    font-size: 14px;
+    font-size: 15px;
     transition: background-color 0.3s ease;
+    color: black;
 }
 
 .details_link:hover {
