--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -32,6 +32,7 @@
     padding: 8px 12px;
     border-radius: 4px;
     transition: background-color 500ms ease;
+    color: black;
 }
 
 .navbar li a:hover {
