--- a/src/components/Pagination.module.css
+++ b/src/components/Pagination.module.css
@@ -1,18 +1,25 @@
 .pagination {
     display: flex;
     justify-content: center;
+    align-items: center;
     margin: 20px 0;
+    font-family: 'Arial', sans-serif;
 }
 
 .button {
     padding: 10px 20px;
     margin: 0 10px;
-    background-color: #007BFF;
-    color: white;
-    border: none;
+    background-color: #9ac7fb;
+    border: #ccc solid 1px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-size: 15px;
+    color:black;
+}
+
+.button:hover {
+    background-color: #539ef6;
 }
 
 .button:disabled {
