--- a/src/components/SearchBar.module.css
+++ b/src/components/SearchBar.module.css
@@ -4,6 +4,16 @@
     align-items: center;
     justify-content: center;
     padding: 10px 20px;
+    margin: 20px;
+    width: fit-content;
+    border: #afafaf solid 1px;
+    border-radius: 5px;
+    box-shadow: #acabab 2px 2px 5px;
+    transition: box-shadow 200ms ease;
+}
+
+.search_bar:hover {
+    box-shadow: #acabab 5px 5px 5px;
 }
 
 .select {
@@ -13,15 +23,20 @@
 .select select {
     width: fit-content;
     padding: 5px;
-    border: 1px solid #333;
+    border: none;
+    background-color: rgba(175, 175, 175, 0.2);
     border-radius: 6px;
-    background-color: transparent;
     cursor: pointer;
     font-size: 16px;
+    transition: background-color 500ms ease;
 }
 
 .select select:focus {
     outline: none;
+}
+
+.select select:hover {
+    background-color: #acabab;
 }
 
 .input {
@@ -30,9 +45,15 @@
 .input input {
     width: fit-content;
     padding: 8px;
-    border: 1px solid #333;
+    border: none;
+    background-color: rgba(175, 175, 175, 0.2);
     border-radius: 6px;
     font-size: 16px;
     outline: none;
+    transition: background-color 500ms ease;
+}
+
+.input input:hover {
+    background-color: #acabab;
 }
 
